profile alignment fixed

--- a/app/profile/profile.css
+++ b/app/profile/profile.css
@@ -20,3 +20,6 @@
     padding: .4rem;
     font-family: Montserrat;
 }
+.profile-content-area{
+    height: 91vh;
+}
